--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "less-loader": "^4.0.5",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
+    "superagent": "^3.8.2",
     "vue": "^2.5.2",
+    "vue-infinite-loading": "^2.2.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
