--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "superagent": "^3.8.2",
     "vue": "^2.5.2",
+    "vue-axios": "^2.0.2",
     "vue-infinite-loading": "^2.2.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -60,6 +62,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "imagemin-webpack-plugin": "^2.0.0",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
