--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "async-validator": "^1.8.2",
     "axios": "^0.17.1",
+    "element-ui": "^2.2.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "node-sass": "^4.7.2",
