--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "superagent": "^3.8.2",
+    "superagent-jsonp": "^0.2.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-infinite-loading": "^2.2.3",
